--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML 5 Template</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Ecard.ly Main</title>
 </head>
 
 <body>
+
 </body>
 
 </html>
