--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
+  <div id="container">
 
+
+
+<!-- Begin Footer -->
+  <footer></footer>
+<!-- End Footer -->
+  </div>
 </body>
 
 </html>
