--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-
   <title>Ecard.ly Main</title>
 </head>
-
 <body>
+  <div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+
+</footer>
+  </div>
 </body>
-
 </html>
