--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   <title>Ecard.ly Main</title>
 </head>
 <body>
-
   <div>
+    <header>
+      <img src="img/logo-ecardly.png" alt="logo">
+  </header>
 
-
+  <section>
+    <article>
+      <h1>Our Latest Ecard!</h1>
+      <h6>on <a href="#">April 13</a> in <a href="#">web design</a> tagged <a href="#">blogging</a></h6>
+    </article>
+    <img src="" alt="">
+  </section>
 
 
 
