--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>Ecard.ly Main</title>
 </head>
 <body>
-
   <div>
-
+    <img src="img/logo-ecardly.png" alt="logo">
 
 
 
@@ -22,20 +21,8 @@
 
 
 <!-- Begin Footer -->
-  <footer></footer>
+    <footer></footer>
 <!-- End Footer -->
-  </div>
-</body>
-
-
-
-
-
-
-
-<footer>
-
-</footer>
   </div>
 </body>
 </html>
