--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <article>
       <h1>Our Latest Ecard!</h1>
       <h6>on <a href="#">April 13</a> in <a href="#">web design</a> tagged <a href="#">blogging</a></h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, tempora, dolore, similique, quibusdam dolores sapiente et amet omnis unde delectus facere necessitatibus totam cumque magni a magnam ad vitae autem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus porro voluptatum similique fugiat eveniet dignissimos placeat ab itaque. Atque, illo veniam rem corrupti quae ut nulla odit velit aspernatur beatae.</p>
     </article>
-    <img src="" alt="">
+    <img src="img/ecard.png" alt="e-card">
   </section>
 
 
