--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus porro voluptatum similique fugiat eveniet dignissimos placeat ab itaque. Atque, illo veniam rem corrupti quae ut nulla odit velit aspernatur beatae.</p>
     </article>
     <img src="img/ecard.png" alt="e-card">
+    <div class="clear"> </div>
   </section>
 
 
