--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 <!-- Begin Footer -->
-    <footer></footer>
+    <footer><p>(c) Ecard Worldwide Corp. 2013</p></footer>
 <!-- End Footer -->
   </div>
 </body>
