--- a/index.html
+++ b/index.html
@@ -24,6 +24,47 @@
     <div class="clear"> </div>
   </section>
 
+  <section id="content_left">
+    <article>
+      <h1>Working on a New Project</h1>
+      <h6>on <a href="#">April 13</a> in <a href="#">web design</a> tagged <a href="#">blogging</a></h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, reprehenderit tempore consectetur totam eaque maiores omnis deserunt eligendi nisi dolorum. Obcaecati, hic nam optio veniam enim eligendi ipsam cumque quasi?</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, commodi, explicabo, quae, reprehenderit alias perspiciatis neque voluptas numquam ad nostrum voluptatum facere error eius a voluptatem libero eligendi odio at.</p>
+
+    </article>
+    <article>
+      <h1>Design Awards!</h1>
+      <h6>on <a href="#">April 13</a> in <a href="#">web design</a> tagged <a href="#">blogging</a></h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, natus, pariatur, magni, amet temporibus necessitatibus culpa molestiae ullam dolore dolorem expedita quia? Magnam, iusto officiis expedita doloribus asperiores accusantium quod!</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, hic, ipsum, rem repellendus deserunt maiores vitae enim labore perspiciatis adipisci consectetur ex doloremque excepturi alias totam ipsam tenetur! Iure, dolore!</p>
+    </article>
+    <article>
+      <h1>This Site is almost Complete, Finally..</h1>
+      <h6>on <a href="#">April 13</a> in <a href="#">web design</a> tagged <a href="#">blogging</a></h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus quam iste voluptate aliquam velit odit hic! Expedita, ipsum qui voluptates odio delectus. Enim, dignissimos, nihil praesentium dicta molestiae veritatis architecto!</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, quas, reprehenderit natus nobis itaque placeat accusantium soluta repellat fugiat. Est dignissimos quam eveniet corrupti ex ipsum minus doloribus minima laboriosam.</p>
+    </article>
+  </section>
+
+  <section id="content_right">
+  <h3>Blog Archive</h3>
+    <ul>
+      <li>October 2011</li>
+      <li>September 2011</li>
+      <li>April 2007</li>
+    </ul>
+  <h3>Friend's Links!</h3>
+  <ul>
+    <li>Bob Dylan</li>
+    <li>Bill Cosby</li>
+    <li>Henry Miller</li>
+  </ul>
+  </section>
+  <div class="clear"></div>
+
 
 
 
